# learningOpenGL

./: .gitignore  CMakeLists.txt  build_linux.sh
cmake/: mingw-w64-x86_64.cmake
ext/: CMakeLists.txt
ext/ffmpeg/: CMakeLists.txt
ext/ffmpeg/include/libavutil/: ffversion.h
ext/ffmpeg/lib/: avutil-60.def  libavformat.so.62  libavutil.so.60  libswresample.so.6  libswscale.so.9
ext/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
include/common/: application.h  camera.h  plane.h  renderer.h  resource_manager.h  shader.h  sprite_batch.h  texture.h  vertex.h
shaders/: simpleLight.frag  simpleLighting.frag  simpleLighting.vert  simpleLightingV2.frag  simpleLightingV2.vert  simpleShader.frag  simpleShader.vert  simpleShader2.frag  simpleShader2.vert  snakeShader.vert  spritebatchShader.frag  spritebatchShader.vert
src/: CMakeLists.txt  ffmpeg_test.cpp  main_lighting_test_v1.cpp  main_lighting_test_v2.cpp  main_opengl_window.cpp  main_shader_class_v1.cpp  main_shader_class_v2.cpp  main_spritebatch_test.cpp  maze_generation.cpp  snake_game.cpp
src/common/: application.cpp  camera.cpp  plane.cpp  renderer.cpp  resource_manager.cpp  shader.cpp  sprite_batch.cpp  texture.cpp
